<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OurStreet</string>
    <string name="prompt">Please Register</string>
    <string name="action_settings">Settings</string>
    <string name="facebook">Facebook</string>
    <string name="register">Register Manually</string>
    <string name="Mapactivity">Mapactivity view</string>
    <string name="OnlineActivity">Change your Status</string>
    <string name="or">Or</string>
    <string name="friendlistactivity">Implement Friendlist Here</string>
    <string name="Add">Add</string>
    <string name="Chat">Chat</string>
    <color name="navy">#0000D0</color>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="streetname">Street</string>
    <string name="number">Number</string>
    <string name="button">Done</string>
    <string name="requests">Requests</string>
    <string name="password">Set Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="login">Login</string>
    <string name="loginpassword">Password</string>
    <string name="search">Search</string>
    <string name="searchbar">Type in name </string>
    <string name="goback">Return </string>
    <string name="accept">Accept </string>
    <string name="deny">Deny </string>
     <string name="city">City </string>
    
    
    
    
  
    <string name="Neighbours_title">Your Neighbours</string>
    <string-array name = "list">
        <item>person 1</item>
        <item>person 2</item>
        <item>person 3</item>
        <item>person 4</item>
        <item>person 5</item>
        <item>person 6</item>
        <item>person 7</item>
        <item>person 8</item>
        <item>person 9</item>
        
    </string-array>
    <string name = "facebook_app_id"> 392671317567541 </string>    
   

</resources>
